# lzt_hma_hub

firmware/lzt_hma_hub_fw/: CMakeLists.txt  Makefile  sdkconfig  sdkconfig.old
firmware/lzt_hma_hub_fw/main/: CMakeLists.txt  app_main.c  app_meshHub.c  app_mqttClient.c  app_process_input.c  app_station.c  app_take_input.c  app_wifiAp.c
firmware/lzt_hma_hub_fw/main/include/: app_main.h
lzt_hma_curtain_con_fw/: Makefile  sdkconfig.old
lzt_hma_curtain_con_fw/main/: app_commons.c  app_mqttClient.c  app_process_input.c  app_take_input.c  app_wifiAp.c
lzt_hma_curtain_con_fw/main/include/: app_main.h
lzt_hma_curtain_fw/: CMakeLists.txt  Makefile  sdkconfig
lzt_hma_curtain_fw/main/: app_main.c  app_mqttClient.c  app_process_input.c  app_station.c  app_take_input.c  app_wifiAp.c
lzt_hma_curtain_fw/main/include/: app_main.h
lzt_hma_single_ch_sw_fw/main/: app_meshHub.c  app_process_input.c  app_station.c  app_take_input.c  app_wifiAp.c
lzt_hma_two_ch_sw_fw/: sdkconfig
lzt_hma_two_ch_sw_fw/main/: app_mqttClient.c  app_process_input.c  app_take_input.c
lzt_hma_two_ch_sw_fw/main/include/: app_main.h
lzt_hma_two_ch_sw_fw_cpy/lzt_hma_two_ch_sw_fw/main/: app_httpServer.c  app_main.c  app_wifiAp.c
lzt_hma_two_ch_sw_fw_cpy_2/lzt_hma_two_ch_sw_fw_cpy_2/main/: CMakeLists.txt  app_httpServer.c  app_mqttClient.c  app_process_input.c  app_take_input.c  app_wifiSta.c  device_multicast.c
lzt_hma_two_ch_sw_fw_cpy_fan_release/main/: CMakeLists.txt  app_main.c  app_take_input.c  device_adc.c
lzt_hma_two_ch_sw_fw_cpy_fan_release/main/include/: app_input.h  app_main.h
lzt_hma_two_ch_sw_fw_cpy_release/main/: app_flash.c  device_sntp.c
lzt_hma_two_ch_sw_fw_cpy_release/main/include/: app_input.h
lzt_hma_two_ch_sw_fw_cpy_release_this/: Makefile
lzt_hma_two_ch_sw_fw_cpy_release_this/main/: app_consol.c  app_mqttClient.c  app_take_input.c
lzt_hma_two_ch_sw_fw_cpy_release_this/main/include/: app_main.h
lzt_hma_two_way_sw_fw/main/include/: app_main.h
release_v1/lzt_hma_single_ch_sw_fw/main/: app_mqttClient.c  app_process_input.c
release_v1/lzt_hma_two_ch_sw_fw/: sdkconfig
release_v1/lzt_hma_two_ch_sw_fw/main/: app_consol.c  app_main.c  app_take_input.c  app_wifiAp.c
under_test/New_folder/: sdkconfig.old
under_test/New_folder/main/: CMakeLists.txt  app_flash.c  app_main.c  app_mqttClient.c
under_test/New_folder/main/include/: app_main.h
under_test/esp_ota/esp_ota_ap/main/: CMakeLists.txt  app_config.h  app_httpServer.c  app_main.c  app_main.h  task.c  task.h
under_test/lzt_hma_curtain_con_fw/: CMakeLists.txt  sdkconfig
under_test/lzt_hma_two_ch_sw_fw_cpy/lzt_hma_two_ch_sw_fw/main/: CMakeLists.txt  app_mqttClient.c  app_process_input.c  app_wifiSta.c
under_test/lzt_hma_two_ch_sw_fw_cpy_2/: sdkconfig  sdkconfig.old
under_test/lzt_hma_two_ch_sw_fw_cpy_2_ota/: sdkconfig.old
under_test/testing/fan_up_down/lzt_hma_two_ch_sw_fw/main/: CMakeLists.txt  app_main.c  app_mqttClient.c  app_process_input.c  app_take_input.c  device_adc.c
under_test/testing/fan_up_down/lzt_hma_two_ch_sw_fw/main/include/: app_main.h
(+51 files in other folders)
