idf_component_register(SRCS     "app_meshHub.c "
                                "app_mqttClient.c" 
                                "app_consolNodeCmd.c" 
                                "app_consol.c" 
                                "app_main.c"
                           
                    INCLUDE_DIRS "." "include")
