idf_component_register(SRCS     "app_flash.c"
                                "app_httpServer.c"
                                "app_wifiSta.c"
                                "app_wifiAp.c"
                                "app_mqttClient.c" 
                                "app_consolNodeCmd.c" 
                                "app_consol.c"
                                
                                "app_process_input.c"
                                "app_take_input.c"
                                "app_main.c"
                            
                           
                    INCLUDE_DIRS "." "include")
