idf_component_register(SRCS     "app_commons.c"
                                "app_station.c "
                                "app_mqttClient.c" 
                                "app_consolNodeCmd.c" 
                                "app_consol.c"
                                "app_wifiAp.c"
                                "device_adc.c"
                                "app_process_input.c"
                                "app_take_input.c"
                                "app_main.c"
                            
                           
                    INCLUDE_DIRS "." "include")
